# sti-2024-autumn

./: README.md
2023D/: .cproject  .mxproject  .project  2023D Debug.launch  2023D.ioc
2023D/Core/Inc/: FO.h  adc.h  judge.h  main.h  signal.h  signals.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
2023D/Core/Src/: FO.c  adc.c  dac.c  gpio.c  i2c.c  judge.c  main.c  signal.c  signals.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c
2023D/Debug/: 2023D.elf  2023D.list  2023D.map  makefile  objects.list
2023D/Debug/Core/Src/: FO.cyclo  FO.d  FO.su  adc.cyclo  adc.d  adc.su  dac.d  dma.d  gpio.d  i2c.d  judge.cyclo  judge.d  judge.su  main.cyclo  main.d  main.su  signal.cyclo  signal.d  signal.su  signals.cyclo  signals.d  signals.su  stm32h7xx_hal_msp.d  stm32h7xx_it.cyclo  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  syscalls.d  tim.cyclo  tim.d  tim.su  usart.d
sim/signals-c/: CMakeLists.txt  demo
sim/signals-c/.cache/clangd/index/: FO.c.47228849CAB063D1.idx  FO.c.D2417A5B26083B2F.idx  FO.h.B1B80A0A02AC202E.idx  FO.h.E9E35F05AAF48990.idx  judge.c.AF7960644FB45697.idx  judge.h.70D2A34DC5B45810.idx  main.c.9490D7131B2D74EF.idx  main.c.B62217AE857852C2.idx  signal.c.901D6A9C3AF0C296.idx  signal.h.7F6359756D4B6692.idx  signals.c.420E58914AAFB22D.idx  signals.h.51E5C064D5CD4FA7.idx
sim/signals-c/inc/: FO.h  judge.h  signals.h
sim/signals-c/src/: FO.c  judge.c  main.c  signal.c  signals.c
sim/signals-py/: bitstream.txt  lr.py  main.py  spectrum.txt  waveform.txt
